@@ -2,8 +2,9 @@ package ch.kos.goat.services;
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
+import ch.kos.goat.mapper.MomentMapper;
+import jakarta.persistence.EntityNotFoundException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -21,89 +22,40 @@ import lombok.AllArgsConstructor;
 public class MomentService {
 
     private final MomentRepository momentRepository;
-    private final TagService tagService; // assumed to exist to resolve tag IDs
-
-    private MomentResponse toMomentResponse(Moment moment) {
-        return MomentResponse.builder()
-            .id(moment.getId())
-            .title(moment.getTitle())
-            .sourceUrl(moment.getSourceUrl())
-            .description(moment.getDescription())
-            .momentAt(moment.getMomentAt())
-            .category(moment.getCategory())
-            .type(moment.getType())
-            .thumbnailUrl(moment.getThumbnailUrl())
-            .localPath(moment.getLocalPath())
-            .archivedAt(moment.getArchivedAt())
-            .clicks(moment.getClicks())
-            .archived(moment.isArchived())
-            .tags(moment.getTags())
-            .createdAt(moment.getCreatedAt())
-            .updatedAt(moment.getUpdatedAt())
-            .build();
-    }
+    private final TagService tagService;
+    private final MomentMapper momentMapper;
 
     public MomentResponse createMoment(MomentRequest request) {
-        try {
-            Set<Tag> tags = tagService.getTagsByIds(request.getTagIds()); // implement in TagService
-
-            Moment moment = Moment.builder()
-                .title(request.getTitle())
-                .sourceUrl(request.getSourceUrl())
-                .description(request.getDescription())
-                .momentAt(request.getMomentAt())
-                .category(request.getCategory())
-                .type(request.getType())
-                .thumbnailUrl(request.getThumbnailUrl())
-                .tags(tags)
-                .build();
-
-            Moment saved = momentRepository.save(moment);
-            return toMomentResponse(saved);
-
-        } catch (Exception e) {
-            throw new RuntimeException("Error creating moment", e);
-        }
+        Set<Tag> tags = tagService.getTagsByIds(request.getTagIds());
+        Moment saved = momentRepository.save(momentMapper.toEntity(request, tags));
+        return momentMapper.toMomentResponse(saved);
     }
 
     public List<MomentResponse> getMoments() {
-        try {
-            return momentRepository.findAll().stream().map(this::toMomentResponse).collect(Collectors.toList());
-        } catch (Exception e) {
-            throw new RuntimeException("Error getting moments", e);
-        }
+        return momentRepository.findAll().stream().map(momentMapper::toMomentResponse).toList();
     }
 
+    public MomentResponse getMoment(Long id) {
+        return momentMapper.toMomentResponse(getMomentOrThrow(id));
+    }
+
+    @Transactional
     public MomentResponse updateMoment(MomentRequest request, Long id) {
-        try {
-            Moment moment = momentRepository.findById(id).orElseThrow(() -> new RuntimeException("Moment not found"));
-
-            Set<Tag> tags = tagService.getTagsByIds(request.getTagIds());
-
-            moment.setTitle(request.getTitle());
-            moment.setSourceUrl(request.getSourceUrl());
-            moment.setDescription(request.getDescription());
-            moment.setMomentAt(request.getMomentAt());
-            moment.setCategory(request.getCategory());
-            moment.setType(request.getType());
-            moment.setThumbnailUrl(request.getThumbnailUrl());
-            moment.setTags(tags);
-
-            Moment updated = momentRepository.save(moment);
-            return toMomentResponse(updated);
-
-        } catch (Exception e) {
-            throw new RuntimeException("Error updating moment", e);
-        }
+        Moment moment = getMomentOrThrow(id);
+        momentMapper.updateMomentFromRequest(request, moment);
+        Set<Tag> tags = tagService.getTagsByIds(request.getTagIds());
+        moment.setTags(tags);
+        Moment updated = momentRepository.save(moment);
+        return momentMapper.toMomentResponse(updated);
     }
 
     public void deleteMoment(Long id) {
-        try {
-            Moment moment = momentRepository.findById(id).orElseThrow(() -> new RuntimeException("Moment not found"));
-            moment.setArchived(true);
-            momentRepository.save(moment);
-        } catch (Exception e) {
-            throw new RuntimeException("Error deleting moment", e);
-        }
+        Moment moment = momentRepository.findById(id).orElseThrow(() -> new RuntimeException("Moment not found"));
+        moment.setArchived(true);
+        momentRepository.save(moment);
+    }
+
+    private Moment getMomentOrThrow(Long id) {
+        return momentRepository.findById(id).orElseThrow(() -> new EntityNotFoundException("Moment not found with id: " + id));
     }
 }
